# speaker_project

./: README.md
ics_gateway/: .gitignore  README.md
ics_gateway/01.CD/3rd.party.raspi/include/: BaseConfig.h  Client.h  ComCmdRunner.h  ComDataModel.h  ComDeviceCounter.h  ComIPCClient.h  ComManagerClient.h  ComProcess.h  ComProcessInfo.h  ComRedis.h  ComRedisListener.h  Connection.h  EventBase.h  Logger.hpp  ManagerIPCConnection.h  ManagerProxy.h  ManagerServer.h  ThresholdRule.h  Utils.hpp
ics_gateway/01.CD/3rd.party.raspi/include/event2/: event-config.h
ics_gateway/01.CD/3rd.party.raspi/include/net-snmp/: net-snmp-config.h
ics_gateway/01.CD/3rd.party.raspi/include/openssl/: opensslconf.h
ics_gateway/01.CD/3rd.party.raspi/lib/: libPocoCrypto.so.49  libPocoCryptod.so.49  libPocoFoundation.so.49  libPocoJSON.so.49  libPocoJSONd.so.49  libPocoNet.so.49  libPocoNetSSL.so.49  libPocoNetSSLd.so.49  libPocoUtil.so.49  libPocoXML.so.49  libcrypto.so.1.0.0  libevent-2.1.so.6.0.2  libevent.la  libevent_core-2.1.so.6.0.2  libevent_core.la  libevent_extra-2.1.so.6.0.2  libevent_extra.la  libevent_openssl-2.1.so.6.0.2  libevent_openssl.la  libevent_pthreads-2.1.so.6.0.2  libevent_pthreads.la  libmodbus.la  libmodbus.so.5.1.0  libnetsnmp.la  libnetsnmp.so.40.0.0  libnetsnmpagent.la  libnetsnmpagent.so.40.0.0  libnetsnmphelpers.la  libnetsnmphelpers.so.40.0.0  libnetsnmpmibs.la  libnetsnmpmibs.so.40.0.0  libnetsnmptrapd.la  libnetsnmptrapd.so.40.0.0  libpaho-mqtt3a.so.1.2.1  libpaho-mqtt3c.so.1  libpaho-mqtt3c.so.1.2.1  libpaho-mqttpp3.so.1  libpaho-mqttpp3.so.1.0.1  libssl.so.1.0.0  libwiringPi.so.2.60
ics_gateway/01.CD/3rd.party.raspi/lib/pkgconfig/: libcrypto.pc  libevent.pc  libevent_core.pc  libevent_extra.pc  libevent_openssl.pc  libevent_pthreads.pc  libmodbus.pc  libssl.pc  netsnmp-agent.pc  netsnmp.pc  openssl.pc
ics_gateway/01.CD/3rd.party.raspi/sbin/: snmptrapd
ics_gateway/01.CD/apps/: CMakeLists.txt  CMakeLists_raspi.txt  CMakeLists_x86.txt  build.sh  install-iot-stack.sh  uninstall-iot-stack.sh
ics_gateway/01.CD/apps/3rd/Utility/: Singleton.hpp
ics_gateway/01.CD/apps/Bridge/: Bridge.cpp  Bridge.h  BridgeConfig.cpp  BridgeConfig.h  BridgeDefine.h  CMakeLists.txt  it5-bridge  main.cpp
ics_gateway/01.CD/apps/Common/: ComCloudInterface.h  ComConfig.cpp  ComConfig.h  ComDefinition.h  ComManagerBridgeInterface.h  ComManagerComInterface.h  ComManagerDownlinkInterface.h  ComManagerMQTTInterface.h  ComManagerModbusInterface.h  ComManagerSNMPInterface.h  ComQueue.cpp  ComQueue.h  ComState.cpp  ComState.h  ComSysInfo.cpp  ComSysInfo.h  ComSysNetwork.cpp  ComSysNetwork.h  ComUtil.cpp  ComUtil.h  ComWatchDog.cpp  ComWatchDog.h  Product.h
ics_gateway/01.CD/apps/Config/: Config-1.0.1  ConfigNote.txt
ics_gateway/01.CD/apps/M2C_MQTT/: CMakeLists.txt  M2CMQTT.cpp  M2CMQTT.h  M2CMQTTConfig.cpp  M2CMQTTConfig.hpp  M2CMQTTDataSet.cpp  M2CMQTTDataSet.h  M2CMQTTDownlink.cpp  M2CMQTTDownlink.h  it5-m2c-mqtt  main.cpp
ics_gateway/01.CD/apps/M2M_SENSOR/: CMakeLists.txt  DS18B20.cpp  DS18B20.h  M2MSensor.hpp  M2MSensorConfig.cpp  M2MSensorConfig.h  SensorDevice.cpp  SensorDevice.h  it5-m2m-sensor  main.cpp
ics_gateway/01.CD/apps/Manager/: CMakeLists.txt  Manager.cpp  Manager.h  ManagerBridgeHandler.cpp  ManagerBrigdeHandler.h  ManagerConfig.cpp  ManagerConfig.h  ManagerConsumer.cpp  ManagerConsumer.h  ManagerDefine.h  ManagerDownlinkHandler.cpp  ManagerDownlinkHandler.h  ManagerWatchDog.cpp  ManagerWatchDog.h  it5-manager  main.cpp
ics_gateway/01.CD/apps/Util/: it5-cfg  it5-main  it5-manager.service
ics_gateway/01.CD/apps/docs/: flow_pre-install.txt
(+376 files in other folders)
